[tool.poetry]
name = "gflow"
version = "0.1.0"
description = "Wrapper to run common git flow commands with remote repositories"
authors = ["Patrick <patrick.pwall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
